# livelybot_dynamic_control

./: README.md
legged_controllers/cfg/: Tutorials.cfg
legged_controllers/config/: joy.yaml
legged_controllers/config/hunter/: reference.info  reference_sim.info  task.info  task_sim.info
legged_controllers/include/legged_controllers/: LeggedController.h  TargetTrajectoriesPublisher.h
legged_controllers/launch/: load_controller_real.launch  load_controller_sim.launch  one_start_gazebo.launch  one_start_real.launch  rosbag_topic.launch  test_joy.launch
legged_controllers/rviz/: legged_robot.rviz
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp  test_pinocchio.cpp
legged_estimation/include/legged_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
legged_estimation/src/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_examples/legged_bridge/legged_bridge_hw/: CMakeLists.txt
legged_examples/legged_bridge/legged_bridge_hw/app/: transmit.cpp
legged_examples/legged_bridge/legged_bridge_hw/launch/: legged_bridge_lively_HW.launch  legged_bridge_lively_imu.launch
legged_examples/legged_bridge/legged_bridge_hw/scripts/: send_cmd.py
legged_examples/legged_bridge/legged_bridge_hw/src/: BridgeHW.cpp
legged_examples/legged_hunter/legged_hunter_description/: MUJOCO_LOG.TXT
legged_examples/legged_hunter/legged_hunter_description/launch/: display.launch  empty_world.launch
legged_examples/legged_hunter/legged_hunter_description/meshes/: base_link.STL  l_ankle_link.STL  l_calf_link.STL  l_foot_link.STL  l_kuan2_link.STL  l_kuan_link.STL  l_thigh_link.STL  r_ankle_link.STL  r_calf_link.STL  r_foot_link.STL  r_kuan2_link.STL  r_kuan_link.STL  (+1 more)
legged_hw/: CMakeLists.txt  package.xml
legged_hw/include/legged_hw/: LeggedHW.h
legged_hw/src/: LeggedHW.cpp
legged_interface/src/: SwitchedModelReferenceManager.cpp
legged_interface/src/foot_planner/: SwingTrajectoryPlanner.cpp
legged_interface/src/visualization/: LeggedRobotVisualizer.cpp
legged_wbc/: CMakeLists.txt  package.xml
legged_wbc/include/legged_wbc/: WbcBase.h
legged_wbc/msg/: nvector3f.msg  vector3f.msg
legged_wbc/src/: WbcBase.cpp
(+11 files in other folders)
